[package]
name = "forge"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
lazy_static = "1.4"
log = "0.4"
northstar-rcon-client = "0.1"
regex = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
simple_logger = "2.2"
tokio = { version = "1.20", features = ["macros", "rt-multi-thread"] }
toml = "0.5"
