[package]
name = "forge-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
forge-shared = { path = "../forge-shared" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
simple_logger = "4.0"
tokio = { version = "1.25", features = ["macros", "rt-multi-thread"] }
toml = "0.7"
